--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+@import url(PEPSI_pl.ttf);
+
 body {
-    background-color: #ddccff;
+    background-color: #F2FDFF;
     margin: 0;
     padding: 0;
     text-align: center;
-    font-family: arial, sans-serif;
+    letter-spacing: 2px;
 }
 
 div {
@@ -12,48 +14,89 @@ div {
 
 h1 {
     text-decoration: underline;
-    font-weight: bold;
-    color: #330099;
+    color: #004585;
 } 
 
 label {
-    color: #4400cc;
+    color: #005cb3;
 }
 
 h2 {
-    color: #884Dff;
+    color: #004B93;
+    margin-top: 50px;
+    margin-bottom: 35px;
 }
 
 h4 {
-    color: #884Dff;
+    color: #004B93;
+    margin-top: 35px;
     
 }
 
 header {
-    background-color: #1b024d;
+    background-color: #00203D;
     padding: 20px;
+    border-bottom: solid 7px;
+
 }
 
 ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    display:flex;
-    font-size: 20px
+    display: flex;
+    font-family: "pepsi";
 }
 
 li a {
     float: left;
-    color: #ddccff;
+    color: #004B93;
     text-decoration: none;
     margin: 5px;
 }
 
 li a:hover {
-    color: white;
+    color: #00A6FB;
 }
 
 img {
     height: 30px;
     float: left;
+    padding-left: 820px;
+}
+
+@font-face {
+    font-family: "fuente";
+    src: url(font.ttf);
+}
+
+@font-face {
+    font-family: "pepsi";
+    src: url(pepsi-font.ttf);
+}
+
+.form__div {
+    border: solid;
+    display: inline-block;
+    padding: 100px;
+    background-color: white;
+    font-family: "fuente", sans-serif;
+    border-color: gray;
+}   
+
+.Enlace__logo {
+    margin: -7px;
+}
+
+.form__div__div {
+    display: grid;
+    grid-template-columns: 100px 100px 100px 100px;
+    margin: 20px;
+}
+
+.form__dni {
+    margin: 20px;
+}
+footer{
+    margin-bottom: 10px;
 }
