--- a/style.css
+++ b/style.css
@@ -108,3 +108,20 @@ img {
 footer{
     margin-bottom: 10px;
 }
+
+.form__div > input {
+    border-style: none;
+    padding: 15px 25px;
+    background-color: #004585;
+    color: white;
+    border: 2px solid gray;
+    border-radius: 10px;
+    margin-top: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
+
+.form__div > input:hover {
+    background-color: #00A6FB;
+    color:#F2FDFF;  
+}
