--- a/productos.css
+++ b/productos.css
@@ -56,6 +56,7 @@ img {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    width: 30%;
 }
 .linea{ 
     display:flex;
@@ -67,8 +68,22 @@ img {
     width: 300px;
 }
 .imagen{
-    max-width: 300px;
-    border-radius: 10px;
+    width: 75%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding-right: 75%;
+    margin: 0;
+}
+.imagen img{
+    max-width: 95%;
+    max-height: 90vh;
+    height: auto;
+    border-radius: 20px;
+    object-fit: contain;
+    padding-right:600px;
+    justify-items: left;
+    justify-content: left;
 }
 .derecha{
     text-align: right;
@@ -76,4 +91,19 @@ img {
 .kiko{
     display:flex;
     justify-content:space-between;
+}
+.contenedor{
+    display:flex;
+    height: 100vh;
+    width: 100vw;
+   
+}
+body{
+    margin: 0;
+    padding: 0;
+    background-image: url(pepsi-pdp.jpeg);
+    background-size: cover;
+    background-position: 200px center;
+    background-repeat: no-repeat;
+    overflow-x: hidden;;
 }
