Actualizado de JS y añadido de seccion

--- a/index.css
+++ b/index.css
@@ -1,39 +1,119 @@
-.grid__index > * {
-    display: grid;
-    border: solid gray;
-    text-align: center;
-    border-radius: 10px;
-    gap: 10px;
-    padding: 10px;
-    background-color: white;
+@import url(PEPSI_pl.ttf);
+
+@font-face {
+    font-family: "pepsi";
+    src: url(pepsi-font.ttf);
 }
 
-.grid__index {
-    grid-template:
-    "grid-tle"
-    "grid-desc"
-    "grid-img";
-    border: solid black;
+body {
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    letter-spacing: 2px;
+}
 
-    @media screen {
-        grid-template:
-        "grid-tle grid-tle"
-        "grid-img grid-desc"
-        "grid-desc grid-desc";
-    }
+div {
+    margin: 1%;
+}
+
+h1 {
+    text-decoration: underline;
+    color: #004585;
+    font-size: 50px;
+    text-align: center;
+} 
+
+label {
+    color: #005cb3;
+}
+
+h2 {
+    color: #004B93;
+    margin-top: 50px;
+    margin-bottom: 35px;
+}
+
+h4 {
+    color: #004B93;
+    margin-top: 35px;
     
-    .grid__main__title {
-        grid-area: grid-tle;
-        background-color: #004585;
-    }
+}
 
-    .grid__main__description {
-        grid-area: grid-desc;
-        background-color: #005cb3;
-    }
+header {
+    background-color: #00203D;
+    padding: 20px;
+    border-bottom: solid 7px;
 
-    .grid__main__imagen {
-        grid-area: grid-img;
-        background-color: #00A6FB;
-    }
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    font-family: "pepsi";
+    justify-content: space-between;
+}
+
+.header {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    font-family: "pepsi";
+}
+
+li a {
+    float: left;
+    color: #004B93;
+    text-decoration: none;
+    margin: 5px;
+}
+
+li a:hover {
+    color: #00A6FB;
+    transform: translateY(-3px);
+}
+
+a > img {
+    height: 30px;
+}
+
+.Enlace__logo {
+    margin: -7px;
+}
+
+.container > * {
+    border-radius: 10px;
+    box-shadow: 1px 3px 10px gray;
+}
+
+.container {
+  display: grid;
+  grid-template-areas:
+    "menu title"
+    "content content";
+  grid-template-columns: 1fr 3fr;
+  gap: 10px;
+  background-color: black;
+  padding: 5px;
+  border-radius: 10px;
+  padding: 10px;
+}
+.container > div {
+  padding: 10px;
+}
+.container > div.title {
+  grid-area: title;
+  text-align: center;
+}
+.container > div.img {
+  grid-area: menu;
+}
+.container > div.content {
+  grid-area: content;
+}
+.container > div.footer {
+  grid-area: footer;
 }
