--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url(PEPSI_pl.ttf);
 
 body {
-    background-color: #F2FDFF;
+    background-color: black;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -46,6 +46,7 @@ ul {
     padding: 0;
     display: flex;
     font-family: "pepsi";
+    justify-content: space-between;
 }
 
 .header {
@@ -65,12 +66,11 @@ li a {
 
 li a:hover {
     color: #00A6FB;
+    transform: translateY(-3px);
 }
 
-img {
+a > img {
     height: 30px;
-    float: left;
-    padding-left: 820px;
 }
 
 @font-face {
@@ -122,6 +122,8 @@ footer{
 }
 
 .form__div > input:hover {
-    background-color: #00A6FB;
-    color:#F2FDFF;  
+    background-color: #008ed4;
+    color:#F2FDFF;
+    transform: translateY(-7px);
+    box-shadow: 1px 7px 10px #83d6ff;
 }
