--- a/index.css
+++ b/index.css
@@ -2,7 +2,12 @@
 
 @font-face {
     font-family: "pepsi";
-    src: url(pepsi-font.ttf);
+    src: url(PepsiOwner-Regular.ttf);
+}
+
+@font-face {
+    font-family: "pepsi2";
+    src: url(PepsiOwner-Extendido.ttf);
 }
 
 body {
@@ -10,7 +15,6 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    letter-spacing: 2px;
 }
 
 div {
@@ -18,9 +22,10 @@ div {
 }
 
 h1 {
-    text-decoration: underline;
-    color: #004585;
-    font-size: 50px;
+    font-family: "pepsi";
+    text-decoration: none;
+    color: #0010ee;
+    font-size: 95px;
     text-align: center;
 } 
 
@@ -29,9 +34,10 @@ label {
 }
 
 h2 {
-    color: #004B93;
-    margin-top: 50px;
-    margin-bottom: 35px;
+    color: white;
+    margin-top: -80px;
+    font-family: "pepsi2";
+    font-size: 45px;
 }
 
 h4 {
@@ -64,14 +70,22 @@ ul {
     font-family: "pepsi";
 }
 
-li a {
+
+.container li a {
+    color: white;
+    text-decoration: none;
+    font-family: "pepsi2";
+    font-size: 23px;
+}
+
+header li a {
     float: left;
     color: #004B93;
     text-decoration: none;
     margin: 5px;
 }
 
-li a:hover {
+header li a:hover {
     color: #00A6FB;
     transform: translateY(-3px);
 }
@@ -84,16 +98,10 @@ a > img {
     margin: -7px;
 }
 
-.container > * {
-    border-radius: 10px;
-    box-shadow: 1px 3px 10px gray;
-}
-
 .container {
   display: grid;
   grid-template-areas:
-    "menu title"
-    "content content";
+    "menu title";
   grid-template-columns: 1fr 3fr;
   gap: 10px;
   background-color: black;
@@ -108,12 +116,115 @@ a > img {
   grid-area: title;
   text-align: center;
 }
+
+.title h1 {
+    margin-top: 150px;
+}
+
 .container > div.img {
   grid-area: menu;
 }
-.container > div.content {
-  grid-area: content;
+
+.container__img {
+    margin-left: 40px;
 }
-.container > div.footer {
-  grid-area: footer;
+
+.container__img img {
+    height: 485px;
+}
+
+.content {
+  display: grid;
+  grid-template-areas:
+    "main title";
+  grid-template-columns: 60% auto;
+  gap: 10px;
+  background-color: black;
+  padding: 5px;
+  border-radius: 10px;
+  padding: 10px;
+}
+.content > div {
+  padding: 10px;
+}
+
+.container > div.content_main {
+  grid-area: main;
+  text-align: center;
+}
+
+.content > div.content_title {
+  grid-area: title;
+  text-align: center;
+}
+
+.content_title img {
+    width: 400px;
+}
+
+.content_title h1 {
+    font-size: 18px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    padding: 20px;
+}
+
+.content_title_btn {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.content_title_btn a {
+    background-color: #0010ee;
+    color: white;
+    text-decoration: none;
+    font-family: pepsi2;
+    border-radius: 33px;
+    font-size: 20px;
+    padding: 20px;
+}
+
+.content_title_btn a:hover {
+    background-color: white;
+    color:#0010ee;
+    transition-duration: 0.4s;
+}
+
+.content_title_rule {
+    text-align: left;
+    padding: 20px;
+}
+
+.content_title_rule a {
+    text-decoration: none;
+    font-style: italic;
+    font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    font-size: 13px;    
+}
+
+.content_main {
+    background-image: url(https://www.pepsi.com/s3fs-public/2025-05/3303620_Pepsicom_2025_Work_May_Drop_BKG_R1_R1_Hero%201728%20x%20960.png);
+    margin-left: -40px;
+    display: flex;
+    scroll-snap-type: x mandatory;
+    overflow-x:auto;
+    flex-wrap: nowrap;
+}
+
+.column {
+    border: solid black;
+    border-radius: 15px;
+    margin: auto;
+    width: 450px;
+    height: 450px;
+    margin-right: 16px;
+    flex: 0 0 auto;
+    scroll-snap-align: center;
+}
+
+.column img {
+    height: 450px;
 }
