--- a/pepsi-nitro-vainilla.css
+++ b/pepsi-nitro-vainilla.css
@@ -1,4 +1,4 @@
-body {
+  body {
     background-color: hsl(0, 0%, 0%);
     margin: 0;
     padding: 0;
@@ -40,11 +40,11 @@ img {
 
 @font-face {
     font-family: "pepsi";
-    src: url(fuentes\pepsi-font.ttf);
+    src: url(pepsi-font.ttf);
 }
 @font-face {
     font-family: "titulos";
-    src: url(fuentes\NCLNeovibes-Demo.otf);
+    src: url(NCLNeovibes-Demo.otf);
 }
 
 .Enlace__logo {
@@ -57,6 +57,7 @@ img {
     align-items: center;
     padding: 20px;
     width: 30%;
+    
 }
 .linea{ 
     display:flex;
@@ -101,21 +102,39 @@ img {
 body{
     margin: 0;
     padding: 0;
-    background-image: url(imagenes\pepsi-nitro-draft-pdp.jpeg);
+    background-image: url(pepsi-nitro-pdp.jpeg);
     background-size: cover;
     background-position: 1px center;
     background-repeat: no-repeat;
     overflow-x: hidden;
 }
-#proteina{
+.proteina{
     margin-top: 35px;
 }
-.botones{
-    width: 0;
-    height: 0;
-    border-top: 20px solid transparent;
-    border-left: 30px solid white;
-    background: none;
-    cursor: pointer;
-    align-content: center;
+.flechas{
+    text-align: center;
+    margin-top: 50px;
+    position: fixed;
+    bottom: 20px;
+    left: 0;
+    width: 100%; 
+    margin-left: 1px center;
+    position: absolute;
+    padding-left: 500px;
+}
+.flechas a{
+    font-size: 50px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    margin: 0 30px;
+
+}
+.flechas a:hover{
+    color: gray;
+}
+.flecha-izquierda{
+    padding-right: 999px;
+}
+.flecha-derecha{
+    padding-left: 1px;
 }
