--- a/html-productos/css/pepsi.css
+++ b/html-productos/css/pepsi.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: "pepsi";
-    src: url(PepsiOwner-Regular.ttf);
+    src: url(fonts/PepsiOwner-Regular.ttf);
 }
 
 @font-face {
     font-family: "pepsi2";
-    src: url(PepsiOwner-Extendido.ttf);
+    src: url(fonts/PepsiOwner-Extendido.ttf);
 }
 
 body {
@@ -102,11 +102,11 @@ a > img {
 
 @font-face {
     font-family: "pepsi";
-    src: url(pepsi-font.ttf);
+    src: url(fonts/pepsi-font.ttf);
 }
 @font-face {
     font-family: "titulos";
-    src: url(NCLNeovibes-Demo.otf);
+    src: url(fonts/NCLNeovibes-Demo.otf);
 }
 
 .hoja{
@@ -153,7 +153,7 @@ a > img {
 }
 .contenedor{
     display:flex;
-    height: 100vh;
+    height: 150vh;
     width: 100vw;
    
 }
@@ -162,9 +162,12 @@ body{
     padding: 0;
     background-image: url(pepsi-pdp.jpeg);
     background-size: cover;
-    background-position: 200px center;
+    background-position: 1px center;
     background-repeat: no-repeat;
-    overflow-x: hidden;;
+    overflow-x: hidden;
+}
+.proteina{
+     margin: 10%;
 }
 .flechas{
     text-align: center;
@@ -172,14 +175,21 @@ body{
     position: fixed;
     bottom: 20px;
     left: 0;
-    width: 100%;    
+    width: 100%; 
+    margin-left: 1px center;
+    position: absolute;
+    padding-left: 500px;
 }
 .flechas a{
     font-size: 50px;
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
     margin: 0 30px;
+
 }
 .flechas a:hover{
     color: gray;
+}
+.flecha{
+    color: white;
 }
