--- a/html-productos/css/style.css
+++ b/html-productos/css/style.css
@@ -1,13 +1,13 @@
-@import url(PEPSI_pl.ttf);
+@import url(fonts/PEPSI_pl.ttf);
 
 @font-face {
     font-family: "pepsi";
-    src: url(PepsiOwner-Regular.ttf);
+    src: url(fonts/PepsiOwner-Regular.ttf);
 }
 
 @font-face {
     font-family: "pepsi2";
-    src: url(PepsiOwner-Extendido.ttf);
+    src: url(fonts/PepsiOwner-Extendido.ttf);
 }
 
 body {
@@ -129,12 +129,12 @@ a > img {
 
 @font-face {
     font-family: "fuente";
-    src: url(font.ttf);
+    src: url(fonts/font.ttf);
 }
 
 @font-face {
     font-family: "pepsi";
-    src: url(pepsi-font.ttf);
+    src: url(fonts/pepsi-font.ttf);
 }
 
 .form__div {
@@ -180,4 +180,28 @@ footer{
     color:#F2FDFF;
     transform: translateY(-7px);
     box-shadow: 1px 7px 10px #83d6ff;
+}
+
+textarea {
+    resize:none;
+    inline-size: 300px;
+    block-size: 100px;
+}
+
+textarea:focus {
+    border-style: none;
+    border:solid #3341ff;
+    background-color: rgb(218, 218, 218);
+}
+
+input:focus {
+    border-style: none;
+    border:solid #3341ff;
+    background-color: rgb(218, 218, 218);
+}
+
+select:focus {
+    border-style: none;
+    border:solid #3341ff;
+    background-color: rgb(218, 218, 218);
 }
