--- a/html-productos/css/stylecontact.css
+++ b/html-productos/css/stylecontact.css
@@ -25,6 +25,7 @@ div {
 h1 {
     text-decoration: underline;
     color: #004585;
+    text-shadow: 1px 2px 4px;
 } 
 
 label {
@@ -35,6 +36,7 @@ h2 {
     color: #004B93;
     margin-top: 50px;
     margin-bottom: 35px;
+    text-shadow: 1px 2px 4px;
 }
 
 h4 {
@@ -128,24 +130,24 @@ a > img {
 
 .grid__div {
     display: grid;
-    border: solid gray;
+    background-color: black;
     text-align: center;
     border-radius: 10px;
     gap: 10px;
     padding: 10px;
-    background-color: white;
 }
 
 .grid__div {
     grid-template:
     "main"
+    "faq"
     "contact"
     "mail"
     "tel";
 
     @media screen {
         grid-template:
-        "main main" 300px
+        "main faq" 500px
         "contact contact" 230px
         "mail tel" 190px;
         width: 798;
@@ -153,30 +155,36 @@ a > img {
     
     .main__div {
         grid-area: main;
-        background-color: #0084ff;
         border-radius: 20px;
-        box-shadow: 1px 10px 10px  gray;
+        margin-top: 100px;
+    }
+
+    .faq__div {
+        grid-area: faq;
+        border-radius: 20px;
+        background-color: white;
+        padding: 15px;
     }
 
     .contact__div {
         grid-area: contact;
-        background-color: #0065c4;
+        background-color: #000e8f;
         border-radius: 20px;
-        box-shadow: 1px 10px 10px  gray;
+        box-shadow: 1px 5px 10px  #ffffff;
     }
 
     .mail__div {
         grid-area: mail;
-        background-color: #004B93;
+        background-color: #000e8f;
         border-radius: 3px;
-        box-shadow: 1px 10px 10px  gray;
+        box-shadow: 1px 5px 10px  #ffffff;
     }
 
     .tel__div {
         grid-area: tel;
-        background-color: #004B93;
+        background-color: #000e8f;
         border-radius: 3px;
-        box-shadow: 1px 10px 10px  gray;
+        box-shadow: 1px 5px 10px  #ffffff;
     }
 }
 
@@ -198,6 +206,10 @@ p {
     text-decoration: none;
 }
 
+.buttons {
+    margin-top: 25px;
+}
+
 .buttons a{
     color: white;
     text-decoration: none;
@@ -211,6 +223,7 @@ p {
 .buttons a:hover {
     color: #004B93;
     background-color: white;
+    transition: 0.3s;
 }
 
 ul > .buttons {
@@ -225,15 +238,17 @@ div > ul {
 }
 
 .logo_x {
-    border: solid black;
     float: left;
+    height: 37px;
+    margin-top: 12px;
+    margin-right: 17px;
 }
 
 .buscador {
     background: none;
     border: none;
     padding: 5px;
-    width: 900px;
+    width: 450px;
     color: white;
     border-bottom: solid white;
     font-size: 20px;
@@ -243,4 +258,57 @@ div > ul {
 .buscador::placeholder {
     color: white;
     font-size: 20px;
+}
+
+.li-logos {
+    margin-top: 20px;
+}
+
+.logo_x:hover {
+    transform: translateY(-7px);
+}
+
+.logo_ig:hover {
+    transform: translateY(-7px);
+}
+
+.logo_fb:hover {
+    transform: translateY(-7px);
+}
+
+.logo_yt:hover {
+    transform: translateY(-7px);
+}
+
+.faq__div img {
+    height:25px;
+    margin-right: 10px;
+    float: left;
+    margin-left: 10px;
+}
+
+.faq__div li {
+    list-style: none;
+    align-content: center;
+    margin-top: 10px;
+}
+
+.faq__div li a {
+    float: left;
+    text-decoration: none;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.faq__div h1 {
+    color: black;
+}
+
+.faq__div li a:hover {
+    color: rgb(255, 19, 19);
+}
+
+h1 img {
+    height:25px;
+    margin-right: 10px;
 }
