--- a/html-productos/css/pepsi-mango.css
+++ b/html-productos/css/pepsi-mango.css
@@ -160,21 +160,33 @@ a > img {
 body{
     margin: 0;
     padding: 0;
-    background-image: url(pepsi-mango-pdp.jpeg);
+    background-image: url(images/pepsi-mango-pdp.jpeg);
     background-size: cover;
     background-position: 1px center;
     background-repeat: no-repeat;
     overflow-x: hidden;
 }
-#proteina{
+.proteina{
     margin-top: 35px;
 }
-.botones{
-    width: 0;
-    height: 0;
-    border-top: 20px solid transparent;
-    border-left: 30px solid white;
-    background: none;
-    cursor: pointer;
-    align-content: center;
+.proteina{
+    margin-top: 35px;
+}
+.flechas{
+    margin-top: 50px;
+    bottom: 20px;
+    width: 100%; 
+    position: absolute;
+    left: 0;
+    text-align: center;
+}
+.flechas a{
+    font-size: 50px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    margin: 0 30px;
+    margin-left: 540px;
+}
+.flechas a:hover{
+    color: gray;
 }
