--- a/html-productos/css/productos.css
+++ b/html-productos/css/productos.css
@@ -160,7 +160,7 @@ a > img {
 body{
     margin: 0;
     padding: 0;
-    background-image: url(pepsi-pdp.jpeg);
+    background-image: url(images/pepsi-pdp.jpeg);
     background-size: cover;
     background-position: 200px center;
     background-repeat: no-repeat;
