--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ footer{
     margin-bottom: 10px;
 }
 
-.form__div > input {
+.form__div .btn-env {
     border-style: none;
     padding: 15px 25px;
     background-color: #004585;
@@ -175,7 +175,7 @@ footer{
     font-size: 15px;
 }
 
-.form__div > input:hover {
+.form__div .btn-env:hover {
     background-color: #008ed4;
     color:#F2FDFF;
     transform: translateY(-7px);
@@ -204,4 +204,16 @@ select:focus {
     border-style: none;
     border:solid #3341ff;
     background-color: rgb(218, 218, 218);
+}
+
+.btn-img {
+    border-style: none;
+    padding: 15px 25px;
+    background-color: #004585;
+    color: white;
+    border: 2px solid gray;
+    border-radius: 10px;
+    margin-top: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
