--- a/css/index.css
+++ b/css/index.css
@@ -259,7 +259,7 @@ li {
     display: flex;
     scroll-snap-type: x mandatory;
     flex-wrap: nowrap;
-    overflow-x: scroll;    
+    overflow-x: auto;    
 }
 
 .column {
@@ -293,4 +293,34 @@ li {
 
 .videos {
     border-style: none;
+}
+
+.title li button {
+    border-style: none;
+    border: solid white;
+    filter: blur(1px);
+    background-color: rgba(20, 20, 20, 0.616);
+    border-radius: 10px;
+    width: 300px;
+    height: 30px;
+    color: white;
+    margin-top: 25px;
+    transition-duration: 0.3s;
+    cursor: pointer;    
+}
+
+.title li button:hover {
+    border: solid rgba(255, 255, 255, 0.808);
+    filter: none;
+    transform: translateY(-7px);
+    box-shadow: 1px 10px 10px rgb(25, 25, 25);
+    transition-duration: 0.3s;
+}
+
+.title li button:focus {
+    background-color: rgba(43, 43, 43, 0.582);
+    transform: translateY(-7px);
+    box-shadow: 1px 10px 10px rgb(25, 25, 25);
+    border: solid rgba(255, 255, 255, 0.808);
+    filter: none;
 }
