--- a/css/login.css
+++ b/css/login.css
@@ -1,10 +1,10 @@
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 880px;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(22, 22, 22);
+    background-color: rgba(0, 0, 0, 0.959);
     filter:blur();
 }
 
@@ -24,12 +24,12 @@ body {
 
 .container {
     background-color: black;
+    box-shadow: 1px 0px 20px black;
     color: white;
-    border: solid gray;
     width: 550px;
     margin-left: 370px;
-    height: 600px;
-    margin-top: 20px;
+    height: 830px;
+    margin-top: 35px;
     text-align: center;
     align-self: center;
 }
@@ -84,6 +84,34 @@ p {
 }
 
 .form__btn input:hover {
+    background-color: white;
+    color: blue;
+    transform: translateY(-7px);
+    box-shadow: 1px 5px 10px blue;
+    border: solid blue;
+    transition-duration: 0.3s;
+}
+
+.form__dbj-btn {
+    margin-top: 35px;
+    margin-bottom: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.form__register-btn input {
+    border-style: none;
+    border: solid white;
+    background-color: blue;
+    color: white;
+    border-radius: 40px;
+    padding: 13px;  
+    width: 180px;
+    font-family: "pepsi";
+    font-size: 25px;
+    transition-duration: 0.3s;
+}
+
+.form__register-btn input:hover {
     background-color: white;
     color: blue;
     transform: translateY(-7px);
